--- a/src/sample/GUI/GUI_UserAdmin.fxml
+++ b/src/sample/GUI/GUI_UserAdmin.fxml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller">
     <children>
-        <Button fx:id="userButton" layoutX="132.0" layoutY="209.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="USER" />
-        <Button fx:id="adminButton" layoutX="132.0" layoutY="314.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="ADMIN" />
-        <ImageView fx:id="logoView" fitHeight="97.0" fitWidth="159.0" layoutX="127.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-
-            </image></ImageView>
-        <Text fill="#797979" layoutX="137.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
-            <font>
-                <Font name="Agency FB" size="22.0" />
-            </font></Text>
+        <Button fx:id="userButton" layoutX="132.0" layoutY="232.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="USER" textFill="WHITE" />
+        <Button fx:id="adminButton" layoutX="132.0" layoutY="314.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="ADMIN" textFill="WHITE" />
+      <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="107.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../photos/logo.png" />
+         </image>
+      </ImageView>
+      <Text fill="#797979" layoutX="138.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
+         <font>
+            <Font name="Agency FB" size="22.0" />
+         </font>
+      </Text>
+      <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
     </children>
 </AnchorPane>
