--- a/src/sample/GUI/GUI_Verification.fxml
+++ b/src/sample/GUI/GUI_Verification.fxml
@@ -10,26 +10,26 @@
 
 <AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Verification">
    <children>
-      <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="106.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="115.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../photos/logo.png" />
          </image>
       </ImageView>
-      <Text fill="#797979" layoutX="154.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
+      <Text fill="#797979" layoutX="146.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
          <font>
             <Font name="Agency FB" size="22.0" />
          </font>
       </Text>
       <Button fx:id="libraryButton" layoutX="133.0" layoutY="371.0" mnemonicParsing="false" onAction="#paneToLibrary" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="Library" textFill="WHITE" />
-      <Separator layoutX="91.0" layoutY="183.0" prefWidth="200.0" />
-      <Text fill="#797979" layoutX="22.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="THANK YOU FOR YOUR PURSHASE!">
+      <Separator layoutX="99.0" layoutY="183.0" prefWidth="200.0" />
+      <Text fill="#797979" layoutX="48.0" layoutY="244.0" strokeType="OUTSIDE" strokeWidth="0.0" text="THANK YOU FOR YOUR PURSHASE!">
          <font>
-            <Font name="Agency FB" size="32.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Text>
-      <Text fill="#797979" layoutX="31.0" layoutY="309.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your purshases songs are now in your library">
+      <Text fill="#797979" layoutX="53.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your purshases songs are now in your library">
          <font>
-            <Font name="Agency FB" size="22.0" />
+            <Font size="14.0" />
          </font>
       </Text>
    </children>
