--- a/src/sample/GUI/GUI_Library.fxml
+++ b/src/sample/GUI/GUI_Library.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,22 +12,31 @@
 
 <AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: fffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
     <children>
-        <ImageView fx:id="logoView" fitHeight="97.0" fitWidth="157.0" layoutX="112.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" />
-        <Button fx:id="cancelButton" layoutX="242.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="138.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-        <Button fx:id="helpButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="123.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-      <ImageView fx:id="logoView1" fitHeight="140.0" fitWidth="168.0" layoutX="117.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="logoView" fitHeight="286.0" fitWidth="363.0" focusTraversable="true" layoutX="4.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../photos/logo.png" />
          </image>
       </ImageView>
-      <Text fill="#797979" layoutX="148.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
+        <Button fx:id="cancelButton" layoutX="253.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="126.67" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
+        <Button fx:id="helpButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="126.67" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
+      <Button fx:id="settingsButton" layoutX="127.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleSettings" prefHeight="40.0" prefWidth="126.67" style="-fx-background-color: dee0e2;" text="SETTINGS" textFill="WHITE" />
+      <Separator layoutX="123.0" layoutY="424.0" orientation="VERTICAL" prefHeight="40.0" prefWidth="0.0" />
+      <Separator layoutX="250.0" layoutY="424.0" orientation="VERTICAL" prefHeight="40.0" prefWidth="0.0" />
+      <Text fill="#33adff99" layoutX="88.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="YOUR LIBRARY">
          <font>
-            <Font name="Agency FB" size="22.0" />
+            <Font name="Century Gothic" size="30.0" />
          </font>
       </Text>
-      <Separator layoutX="101.0" layoutY="200.0" prefWidth="200.0" />
-      <Button fx:id="settingsButton" layoutX="116.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleSettings" prefHeight="40.0" prefWidth="132.0" style="-fx-background-color: dee0e2;" text="SETTINGS" textFill="WHITE" />
-      <Separator layoutX="120.0" layoutY="424.0" orientation="VERTICAL" prefHeight="40.0" prefWidth="0.0" />
-      <Separator layoutX="245.0" layoutY="424.0" orientation="VERTICAL" prefHeight="40.0" prefWidth="0.0" />
+      <TableView layoutY="64.0" prefHeight="360.0" prefWidth="381.0">
+         <columns>
+            <TableColumn prefWidth="96.0" resizable="false" style="-fx-background-color: #33adFF; -fx-text-fill: #FFFFFF;" text="Title" />
+            <TableColumn minWidth="0.0" prefWidth="133.0" style="-fx-background-color: #33adFF;" text="Artist" />
+            <TableColumn prefWidth="52.0" style="-fx-background-color: #33adff; -fx-text-fill: #FFFFF;" text="Genre" />
+            <TableColumn minWidth="5.0" prefWidth="98.0" style="-fx-background-color: #33adff;" text="🕒" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
     </children>
 </AnchorPane>
