--- a/src/sample/GUI/GUI_Login.fxml
+++ b/src/sample/GUI/GUI_Login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
@@ -16,7 +17,7 @@
          <image>
              <Image url="@../photos/logo.png" />
          </image></ImageView>
-        <Text fill="#797979" layoutX="138.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
+        <Text fill="#797979" layoutX="154.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
             <font>
                 <Font name="Agency FB" size="22.0" />
             </font>
@@ -33,9 +34,10 @@
         </Text>
         <TextField fx:id="userNameTextField" layoutX="115.0" layoutY="232.0" />
         <PasswordField fx:id="passwordTextField" layoutX="115.0" layoutY="307.0" />
-        <Button fx:id="signInButton" layoutX="132.0" layoutY="361.0" mnemonicParsing="false" onAction="#loginVerification" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="SIGN IN" textFill="WHITE" />
+        <Button fx:id="signInButton" layoutX="133.0" layoutY="377.0" mnemonicParsing="false" onAction="#loginVerification" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="SIGN IN" textFill="WHITE" />
         <Button fx:id="helpButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
         <Button fx:id="cancelButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
       <Separator layoutX="91.0" layoutY="181.0" prefWidth="200.0" />
+      <Hyperlink layoutX="140.0" layoutY="332.0" onAction="#forgotPassword" text="Forgot password?" />
     </children>
 </AnchorPane>
