--- a/src/sample/GUI/GUI_Library.fxml
+++ b/src/sample/GUI/GUI_Library.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: fffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
+<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: #222222;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
     <children>
       <ImageView fx:id="logoView" fitHeight="286.0" fitWidth="363.0" focusTraversable="true" layoutX="4.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -27,12 +27,12 @@
             <Font name="Century Gothic" size="30.0" />
          </font>
       </Text>
-      <TableView layoutY="64.0" prefHeight="360.0" prefWidth="381.0">
+      <TableView fx:id="tableView" style="-fx-background-color: #222222;" layoutY="64.0" prefHeight="360.0" prefWidth="381.0">
          <columns>
-            <TableColumn prefWidth="96.0" resizable="false" style="-fx-background-color: #33adFF; -fx-text-fill: #FFFFFF;" text="Title" />
-            <TableColumn minWidth="0.0" prefWidth="133.0" style="-fx-background-color: #33adFF;" text="Artist" />
-            <TableColumn prefWidth="52.0" style="-fx-background-color: #33adff; -fx-text-fill: #FFFFF;" text="Genre" />
-            <TableColumn minWidth="5.0" prefWidth="98.0" style="-fx-background-color: #33adff;" text="🕒" />
+            <TableColumn fx:id="columnSongName" prefWidth="96.0" resizable="false" style="-fx-background-color: #33adFF; -fx-text-fill: #FFFFFF;" text="Title" />
+            <TableColumn fx:id="columnArtist" minWidth="0.0" prefWidth="133.0" style="-fx-background-color: #33adFF; -fx-text-fill: #FFFFFF;" text="Artist" />
+            <TableColumn fx:id="columnGenre" prefWidth="52.0" style="-fx-background-color: #33adff; -fx-text-fill: #FFFFFF;" text="Genre" />
+            <TableColumn fx:id="columnDuration" minWidth="5.0" prefWidth="98.0" style="-fx-background-color: #33adff; -fx-text-fill: #FFFFFF;" text="🕒" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
