--- a/src/sample/GUI/GUI_LoginRegister.fxml
+++ b/src/sample/GUI/GUI_LoginRegister.fxml
@@ -10,8 +10,8 @@
 
 <AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: fffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_LoginRegister">
    <children>
-      <Button fx:id="signInButton" layoutX="132.0" layoutY="242.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="SIGN IN" textFill="WHITE" />
-      <Button fx:id="createAccButton" layoutX="132.0" layoutY="326.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="CREATE ACCOUNT" textFill="WHITE" />
+      <Button fx:id="signInButton" onAction="#paneChangeToLogin" layoutX="132.0" layoutY="242.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="SIGN IN" textFill="WHITE" />
+      <Button fx:id="createAccButton" onAction="#paceChangeToCreateAcc" layoutX="132.0" layoutY="326.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="CREATE ACCOUNT" textFill="WHITE" />
       <Button fx:id="cancelButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
       <Button fx:id="helpButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
       <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="106.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
