--- a/src/sample/GUI/GUI_Library.fxml
+++ b/src/sample/GUI/GUI_Library.fxml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: fffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
-    <children>
-      <ImageView fx:id="logoView" fitHeight="286.0" fitWidth="363.0" focusTraversable="true" layoutX="4.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
+   <children>
+      <Button fx:id="storeButton" mnemonicParsing="false" onAction="#paneChangeToStore" prefHeight="26.0" prefWidth="98.0" style="-fx-background-color: #33adff;" text="STORE" textFill="WHITE" />
+      <Button layoutX="96.0" mnemonicParsing="false" onAction="#handleSettings" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="SETTINGS" textFill="WHITE" />
+      <Button layoutX="191.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="ACCOUNT" textFill="WHITE" />
+      <Button layoutX="286.0" mnemonicParsing="false" onAction="#handleLogOut" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="LOG OUT" textFill="WHITE" />
+      <Separator layoutX="95.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
+      <Separator layoutX="190.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
+      <Separator layoutX="284.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="7.0" />
+      <ImageView fx:id="logoView" fitHeight="75.0" fitWidth="95.0" layoutX="144.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../photos/logo.png" />
+            <Image url="@../../../../../../Itunes2.0/src/sample/photos/logotrans.png" />
          </image>
       </ImageView>
-        <Button fx:id="cancelButton" layoutX="253.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="126.67" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-        <Button fx:id="helpButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="126.67" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-      <Button fx:id="settingsButton" layoutX="127.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleSettings" prefHeight="40.0" prefWidth="126.67" style="-fx-background-color: dee0e2;" text="SETTINGS" textFill="WHITE" />
-      <Separator layoutX="123.0" layoutY="424.0" orientation="VERTICAL" prefHeight="40.0" prefWidth="0.0" />
-      <Separator layoutX="250.0" layoutY="424.0" orientation="VERTICAL" prefHeight="40.0" prefWidth="0.0" />
-      <Text fill="#33adff99" layoutX="88.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="YOUR LIBRARY">
-         <font>
-            <Font name="Century Gothic" size="30.0" />
-         </font>
-      </Text>
-      <TableView layoutY="64.0" prefHeight="360.0" prefWidth="381.0">
-         <columns>
-            <TableColumn prefWidth="96.0" resizable="false" style="-fx-background-color: #33adFF; -fx-text-fill: #FFFFFF;" text="Title" />
-            <TableColumn minWidth="0.0" prefWidth="133.0" style="-fx-background-color: #33adFF;" text="Artist" />
-            <TableColumn prefWidth="52.0" style="-fx-background-color: #33adff; -fx-text-fill: #FFFFF;" text="Genre" />
-            <TableColumn minWidth="5.0" prefWidth="98.0" style="-fx-background-color: #33adff;" text="🕒" />
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-    </children>
+      <ScrollPane layoutY="105.0" prefHeight="358.0" prefWidth="380.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="357.0" prefWidth="378.0">
+               <children>
+                  <TableView layoutY="-1.0" prefHeight="464.0" prefWidth="380.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="Title" />
+                      <TableColumn prefWidth="75.0" text="Artist" />
+                        <TableColumn prefWidth="75.0" text="Album" />
+                        <TableColumn prefWidth="75.0" text="🕒" />
+                        <TableColumn prefWidth="75.0" text="🛒" />
+                    </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
+   </children>
 </AnchorPane>
