--- a/src/sample/GUI/GUI_Store.fxml
+++ b/src/sample/GUI/GUI_Store.fxml
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Store">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Store">
    <children>
-      <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="107.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <Button fx:id="libraryButton" mnemonicParsing="false" onAction="#paneChangeToLibrary" prefHeight="26.0" prefWidth="98.0" style="-fx-background-color: #33adff;" text="LIBRARY" textFill="WHITE" />
+      <Button fx:id="addSongButton2" layoutX="96.0" mnemonicParsing="false" onAction="#handleSettings" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="SETTINGS" textFill="WHITE" />
+      <Button fx:id="addSongButton1" layoutX="191.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="ACCOUNT" textFill="WHITE" />
+      <Button fx:id="addSongButton3" layoutX="286.0" mnemonicParsing="false" onAction="#handleLogOut" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="LOG OUT" textFill="WHITE" />
+      <Separator layoutX="95.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
+      <Separator layoutX="190.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
+      <Separator layoutX="284.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="7.0" />
+      <ImageView fx:id="logoView" fitHeight="75.0" fitWidth="95.0" layoutX="144.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../photos/logo.png" />
          </image>
       </ImageView>
-      <Text fill="#797979" layoutX="154.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
-         <font>
-            <Font name="Agency FB" size="22.0" />
-         </font>
-      </Text>
-      <Button fx:id="helpButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-      <Button fx:id="cancelButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-      <Separator layoutX="91.0" layoutY="183.0" prefWidth="200.0" />
-      <ButtonBar layoutX="54.0" layoutY="322.0" prefHeight="40.0" prefWidth="200.0" />
+      <Button fx:id="addSongButton11" layoutX="112.0" layoutY="418.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: #33adff;" text="🛒" textFill="WHITE" />
+      <ScrollPane layoutX="-1.0" layoutY="117.0" prefHeight="295.0" prefWidth="380.0">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="378.0">
+               <children>
+                  <TableView layoutY="-1.0" prefHeight="464.0" prefWidth="380.0">
+                     <columns>
+                        <TableColumn prefWidth="75.0" text="Title" />
+                        <TableColumn prefWidth="75.0" text="Artist" />
+                        <TableColumn prefWidth="75.0" text="Album" />
+                        <TableColumn prefWidth="75.0" text="DURATION" />
+                        <TableColumn prefWidth="75.0" text="PRICE" />
+                     </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
