--- a/src/sample/GUI/GUI_Store.fxml
+++ b/src/sample/GUI/GUI_Store.fxml
@@ -11,10 +11,10 @@
 
 <AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Store">
    <children>
-      <Button fx:id="libraryButton" mnemonicParsing="false" onAction="#paneChangeToLibrary" prefHeight="26.0" prefWidth="98.0" style="-fx-background-color: #33adff;" text="LIBRARY" textFill="WHITE" />
-      <Button fx:id="addSongButton2" layoutX="96.0" mnemonicParsing="false" onAction="#handleSettings" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="SETTINGS" textFill="WHITE" />
-      <Button fx:id="addSongButton1" layoutX="191.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="ACCOUNT" textFill="WHITE" />
-      <Button fx:id="addSongButton3" layoutX="286.0" mnemonicParsing="false" onAction="#handleLogOut" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="LOG OUT" textFill="WHITE" />
+      <Button mnemonicParsing="false" onAction="#paneChangeToLibrary" prefHeight="26.0" prefWidth="98.0" style="-fx-background-color: #33adff;" text="LIBRARY" textFill="WHITE" />
+      <Button layoutX="96.0" mnemonicParsing="false" onAction="#AddFunds" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="ADD FUND" textFill="WHITE" />
+      <Button layoutX="191.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="HELP" textFill="WHITE" />
+      <Button layoutX="286.0" mnemonicParsing="false" onAction="#handleLogOut" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="LOG OUT" textFill="WHITE" />
       <Separator layoutX="95.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
       <Separator layoutX="190.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
       <Separator layoutX="284.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="7.0" />
