--- a/src/sample/GUI/GUI_Library.fxml
+++ b/src/sample/GUI/GUI_Library.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -10,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: #222222;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
+<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: #222222;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
     <children>
       <ImageView fx:id="logoView" fitHeight="286.0" fitWidth="363.0" focusTraversable="true" layoutX="4.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -27,7 +32,7 @@
             <Font name="Century Gothic" size="30.0" />
          </font>
       </Text>
-      <TableView fx:id="tableView" style="-fx-background-color: #222222;" layoutY="64.0" prefHeight="360.0" prefWidth="381.0">
+      <TableView fx:id="tableView" layoutY="64.0" prefHeight="360.0" prefWidth="381.0" style="-fx-background-color: #222222;">
          <columns>
             <TableColumn fx:id="columnSongName" prefWidth="96.0" resizable="false" style="-fx-background-color: #33adFF; -fx-text-fill: #FFFFFF;" text="Title" />
             <TableColumn fx:id="columnArtist" minWidth="0.0" prefWidth="133.0" style="-fx-background-color: #33adFF; -fx-text-fill: #FFFFFF;" text="Artist" />
