--- a/src/sample/GUI/GUI_Verification.fxml
+++ b/src/sample/GUI/GUI_Verification.fxml
@@ -32,5 +32,6 @@
             <Font size="13.0" />
          </font>
       </Text>
+      <Button layoutX="37.0" layoutY="186.0" mnemonicParsing="false" style="-fx-background-color: feff3d;" text="Button" />
    </children>
 </AnchorPane>
