--- a/src/sample/GUI/GUI_Store.fxml
+++ b/src/sample/GUI/GUI_Store.fxml
@@ -28,13 +28,13 @@
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="378.0">
                <children>
-                  <TableView layoutY="-1.0" prefHeight="464.0" prefWidth="380.0">
+                  <TableView fx:id="tableView" layoutY="-1.0" prefHeight="464.0" prefWidth="380.0">
                      <columns>
-                        <TableColumn prefWidth="75.0" text="Title" />
-                        <TableColumn prefWidth="75.0" text="Artist" />
-                        <TableColumn prefWidth="75.0" text="Album" />
-                        <TableColumn prefWidth="75.0" text="DURATION" />
-                        <TableColumn prefWidth="75.0" text="PRICE" />
+                        <TableColumn fx:id="songNameColumn"prefWidth="75.0" text="Title" />
+                        <TableColumn fx:id="artistColumn" prefWidth="75.0" text="Artist" />
+                        <TableColumn fx:id="albumColumn" prefWidth="75.0" text="Album" />
+                        <TableColumn fx:id="durationColumn" prefWidth="75.0" text="Duration" />
+                        <TableColumn fx:id="priceColumn" prefWidth="75.0" text="Price" />
                      </columns>
                   </TableView>
                </children>
