--- a/src/sample/GUI/GUI_Addfunds.fxml
+++ b/src/sample/GUI/GUI_Addfunds.fxml
@@ -40,7 +40,7 @@
                 <Button mnemonicParsing="false" onAction="#handleAdd25Dollar" style="-fx-background-color: #33adff;" text="25 $" textFill="WHITE" />
             </buttons>
         </ButtonBar>
-        <Button fx:id="helpButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-        <Button fx:id="cancelButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleBackToStore" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="STORE" textFill="WHITE" />
+        <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
+        <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleBackToStore" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="STORE" textFill="WHITE" />
     </children>
 </AnchorPane>
