--- a/src/sample/GUI/GUI_Admin.fxml
+++ b/src/sample/GUI/GUI_Admin.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,36 +11,8 @@
 
 <AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Admin">
     <children>
-        <Button fx:id="addSongButton" layoutX="312.0" layoutY="216.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="36.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
         <Button fx:id="cancelButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
         <Button fx:id="settingsButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-        <Button fx:id="removeUserButton" layoutX="312.0" layoutY="314.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="36.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
-        <Button fx:id="changePriceButton" layoutX="312.0" layoutY="366.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="36.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
-        <TextField fx:id="addSongField" layoutX="127.0" layoutY="217.0" onAction="#addSongs" />
-        <TextField fx:id="removeUserField" layoutX="127.0" layoutY="315.0" onAction="#removeUser" />
-        <TextField fx:id="changePriceField" layoutX="127.0" layoutY="367.0" onAction="#changePrice" />
-        <Text fill="#00000099" layoutX="18.0" layoutY="240.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add song">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Text>
-        <Text fill="#00000099" layoutX="18.0" layoutY="336.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Remove user">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Text>
-        <Text fill="#00000099" layoutX="18.0" layoutY="387.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Change price">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Text>
-        <TextField fx:id="removeSongField" layoutX="127.0" layoutY="267.0" onAction="#removeSongs" />
-        <Text fill="#00000099" layoutX="17.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Remove song">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Text>
-        <Button fx:id="removeSongButton" layoutX="312.0" layoutY="266.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="36.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
         <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="106.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../photos/logo.png" />
@@ -52,5 +24,23 @@
             </font>
         </Text>
         <Separator layoutX="90.0" layoutY="190.0" prefWidth="200.0" />
+      <ButtonBar layoutX="92.0" layoutY="212.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: f2f2f2;">
+         <buttons>
+            <Text fill="#00000099" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD SONG" wrappingWidth="79.9921875" />
+            <Button minWidth="67.0" mnemonicParsing="false" onAction="#paneChangeToAddSong" prefHeight="25.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
+         </buttons>
+      </ButtonBar>
+      <ButtonBar layoutX="90.0" layoutY="279.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: f2f2f2;">
+         <buttons>
+            <Text fill="#00000099" strokeType="OUTSIDE" strokeWidth="0.0" text="REMOVE SONG" wrappingWidth="89.192138671875" />
+            <Button mnemonicParsing="false" onAction="#paneChangeToRemoveSong" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
+         </buttons>
+      </ButtonBar>
+      <ButtonBar layoutX="90.0" layoutY="346.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: f2f2f2;">
+         <buttons>
+            <Text fill="#00000099" strokeType="OUTSIDE" strokeWidth="0.0" text="CHANGE PRICE" wrappingWidth="81.19219970703125" />
+            <Button mnemonicParsing="false" onAction="#paneChangeToChangePrice" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
+         </buttons>
+      </ButtonBar>
     </children>
 </AnchorPane>
