--- a/src/sample/GUI/GUI_Cart.fxml
+++ b/src/sample/GUI/GUI_Cart.fxml
@@ -24,7 +24,7 @@
          </font>
       </Text>
       <ListView fx:id="listView" layoutX="30.0" layoutY="251.0" prefHeight="151.0" prefWidth="320.0" />
-      <TextField fx:id="totalPriceField" layoutX="30.0" layoutY="415.0" prefHeight="29.0" prefWidth="152.0" promptText="TOTAL PRICE" />
+      <TextField fx:id="totalPriceField" disable="true" editable="false" focusTraversable="false" layoutX="30.0" layoutY="415.0" prefHeight="29.0" prefWidth="152.0" promptText="TOTAL PRICE" />
       <Text fill="#797979" layoutX="137.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
          <font>
             <Font name="Agency FB" size="22.0" />
