--- a/src/sample/GUI/GUI_Store.fxml
+++ b/src/sample/GUI/GUI_Store.fxml
@@ -23,7 +23,7 @@
             <Image url="@../photos/logo.png" />
          </image>
       </ImageView>
-      <Button fx:id="addSongButton11" layoutX="112.0" layoutY="418.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: #33adff;" text="🛒" textFill="WHITE" />
+      <Button layoutX="112.0" layoutY="418.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: #33adff;" text="🛒" textFill="WHITE" />
       <ScrollPane layoutX="-1.0" layoutY="117.0" prefHeight="295.0" prefWidth="380.0">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="378.0">
