--- a/src/sample/GUI/GUI_ForgotPassword.fxml
+++ b/src/sample/GUI/GUI_ForgotPassword.fxml
@@ -16,14 +16,9 @@
             <Image url="@../photos/logo.png" />
          </image>
       </ImageView>
-      <Text fill="#797979" layoutX="139.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
-         <font>
-            <Font name="Agency FB" size="22.0" />
-         </font>
-      </Text>
       <Button layoutX="131.0" layoutY="377.0" mnemonicParsing="false" onAction="#loginVerification" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="SEND " textFill="WHITE" />
-      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-      <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
+      <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
+      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
       <Separator layoutX="91.0" layoutY="181.0" prefWidth="200.0" />
       <Text fill="#00000099" layoutX="99.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot your password?">
          <font>
@@ -36,5 +31,10 @@
          </font>
       </Text>
       <TextField fx:id="emailField" alignment="TOP_LEFT" layoutX="61.0" layoutY="311.0" prefHeight="27.0" prefWidth="257.0" promptText="Email address" />
+      <Text fill="#797979" layoutX="137.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+         <font>
+            <Font name="Book Antiqua" size="22.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
