--- a/src/sample/GUI/GUI_AccountSettings.fxml
+++ b/src/sample/GUI/GUI_AccountSettings.fxml
@@ -11,26 +11,26 @@
 
 <AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_AccountSettings">
     <children>
-        <Button layoutX="137.0" layoutY="385.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="47.0" prefWidth="106.0" style="-fx-background-color: #33adff;" text="SAVE CHANGES" textFill="WHITE" />
         <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="107.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../photos/logo.png" />
             </image>
         </ImageView>
-        <Text fill="#797979" layoutX="139.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
-            <font>
-                <Font name="Agency FB" size="22.0" />
-            </font>
-        </Text>
         <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
         <TextField alignment="CENTER" layoutX="118.0" layoutY="245.0" onAction="#changeUsernameField" promptText="USERNAME" />
         <TextField alignment="CENTER" layoutX="118.0" layoutY="289.0" onAction="#changePasswordField" promptText="PASSWORD" />
         <TextField alignment="CENTER" layoutX="118.0" layoutY="332.0" onAction="#confirmPasswordField" promptText="CONFIRM PASSWORD" />
-        <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-        <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-      <Text fill="#00000099" layoutX="155.0" layoutY="226.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CHANGE">
+        <Button layoutX="137.0" layoutY="385.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="47.0" prefWidth="106.0" style="-fx-background-color: #33adff;" text="SAVE CHANGES" textFill="WHITE" />
+        <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
+        <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
+      <Text fill="#00000099" layoutX="124.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CHANGE SETTINGS">
          <font>
-            <Font size="18.0" />
+            <Font name="Calibri Light" size="18.0" />
+         </font>
+      </Text>
+      <Text fill="#797979" layoutX="137.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+         <font>
+            <Font name="Book Antiqua" size="22.0" />
          </font>
       </Text>
     </children>
