--- a/src/sample/GUI/GUI_AddSong.fxml
+++ b/src/sample/GUI/GUI_AddSong.fxml
@@ -16,20 +16,20 @@
             <Image url="@../photos/logo.png" />
          </image>
       </ImageView>
-      <Text fill="#797979" layoutX="139.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
+      <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
+      <TextField fx:id="titleField" alignment="CENTER" layoutX="17.0" layoutY="248.0" promptText="TITLE" />
+      <TextField fx:id="artistField" alignment="CENTER" layoutX="17.0" layoutY="305.0" promptText="ARTIST" />
+      <TextField fx:id="genreField" alignment="CENTER" layoutX="16.0" layoutY="364.0" promptText="GENRE" />
+      <TextField fx:id="albumField" alignment="CENTER" layoutX="217.0" layoutY="248.0" promptText="ALBUM" />
+      <TextField fx:id="durationField" alignment="CENTER" layoutX="217.0" layoutY="305.0" promptText="DURATION" />
+      <TextField fx:id="priceField" alignment="CENTER" layoutX="217.0" layoutY="363.0" promptText="PRICE" />
+      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
+      <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
+      <Button layoutX="156.0" layoutY="409.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="29.0" prefWidth="68.0" style="-fx-background-color: #33adff;" text="SAVE" textFill="WHITE" />
+      <Text fill="#797979" layoutX="137.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
          <font>
-            <Font name="Agency FB" size="22.0" />
+            <Font name="Book Antiqua" size="22.0" />
          </font>
       </Text>
-      <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
-      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-      <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-      <TextField fx:id="titleField" alignment="CENTER" layoutX="17.0" layoutY="248.0" promptText="TITLE" />
-      <TextField fx:id="priceField" alignment="CENTER" layoutX="217.0" layoutY="363.0" promptText="PRICE" />
-      <TextField fx:id="durationField" alignment="CENTER" layoutX="217.0" layoutY="305.0" promptText="DURATION" />
-      <TextField fx:id="albumField" alignment="CENTER" layoutX="217.0" layoutY="248.0" promptText="ALBUM" />
-      <TextField fx:id="artistField" alignment="CENTER" layoutX="17.0" layoutY="305.0" promptText="ARTIST" />
-      <Button layoutX="156.0" layoutY="409.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="29.0" prefWidth="68.0" style="-fx-background-color: #33adff;" text="SAVE" textFill="WHITE" />
-      <TextField fx:id="genreField" alignment="CENTER" layoutX="16.0" layoutY="364.0" promptText="GENRE" />
    </children>
 </AnchorPane>
