--- a/src/sample/GUI/GUI_Admin.fxml
+++ b/src/sample/GUI/GUI_Admin.fxml
@@ -11,18 +11,13 @@
 
 <AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Admin">
     <children>
-        <Button fx:id="cancelButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-        <Button fx:id="settingsButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
+        <Button fx:id="cancelButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
+        <Button fx:id="settingsButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
         <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="106.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../photos/logo.png" />
             </image>
         </ImageView>
-        <Text fill="#797979" layoutX="139.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
-            <font>
-                <Font name="Agency FB" size="22.0" />
-            </font>
-        </Text>
         <Separator layoutX="90.0" layoutY="190.0" prefWidth="200.0" />
       <ButtonBar layoutX="92.0" layoutY="212.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: f2f2f2;">
          <buttons>
@@ -42,5 +37,10 @@
             <Button mnemonicParsing="false" onAction="#paneChangeToChangePrice" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
+      <Text fill="#797979" layoutX="137.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+         <font>
+            <Font name="Book Antiqua" size="22.0" />
+         </font>
+      </Text>
     </children>
 </AnchorPane>
