--- a/src/sample/GUI/GUI_Library.fxml
+++ b/src/sample/GUI/GUI_Library.fxml
@@ -29,7 +29,7 @@
                     <children>
                         <TableView fx:id="tableView" layoutY="-1.0" prefHeight="464.0" prefWidth="380.0">
                             <columns>
-                                <TableColumn fx:id="columnSongName" prefWidth="95.0" text="Title" />
+                                <TableColumn fx:id="columnSongName" prefWidth="95.0" style="-fx-fill: FFFFFF;" text="Title" />
                                 <TableColumn fx:id="columnArtist" prefWidth="95.0" text="Artist" />
                                 <TableColumn fx:id="columnAlbum" prefWidth="95.0" text="Album" />
                                 <TableColumn fx:id="columnDuration" prefWidth="95.0" text="🕒" />
