--- a/src/sample/GUI/GUI_Store.fxml
+++ b/src/sample/GUI/GUI_Store.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -23,12 +24,12 @@
             <Image url="@../photos/logo.png" />
          </image>
       </ImageView>
-      <Button layoutX="112.0" layoutY="418.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: #33adff;" text="🛒" textFill="WHITE" />
+      <Button layoutX="240.0" layoutY="421.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="35.0" prefWidth="88.0" style="-fx-background-color: #33adff;" text="🛒" textFill="WHITE" />
       <ScrollPane layoutX="-1.0" layoutY="117.0" prefHeight="295.0" prefWidth="380.0">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="378.0">
                <children>
-                  <TableView layoutY="-1.0" prefHeight="464.0" prefWidth="380.0">
+                  <TableView layoutX="-1.0" prefHeight="445.0" prefWidth="380.0">
                      <columns>
                         <TableColumn prefWidth="75.0" text="Title" />
                         <TableColumn prefWidth="75.0" text="Artist" />
@@ -41,5 +42,6 @@
             </AnchorPane>
          </content>
       </ScrollPane>
-   </children>
+      <TextField alignment="CENTER" layoutX="49.0" layoutY="426.0" onAction="#userBalance" promptText="BALANCE" />
+</children>
 </AnchorPane>
