Add functionality to admin scene

--- a/src/sample/GUI/GUI_ForgotPassword.fxml
+++ b/src/sample/GUI/GUI_ForgotPassword.fxml
@@ -21,9 +21,9 @@
             <Font name="Agency FB" size="22.0" />
          </font>
       </Text>
-      <Button fx:id="signInButton" layoutX="131.0" layoutY="377.0" mnemonicParsing="false" onAction="#loginVerification" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="SEND " textFill="WHITE" />
-      <Button fx:id="helpButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-      <Button fx:id="cancelButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
+      <Button layoutX="131.0" layoutY="377.0" mnemonicParsing="false" onAction="#sendEmail" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="SEND " textFill="WHITE" />
+      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
+      <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
       <Separator layoutX="91.0" layoutY="181.0" prefWidth="200.0" />
       <Text fill="#00000099" layoutX="99.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot your password?">
          <font>
