--- a/src/sample/GUI/GUI_AddSong.fxml
+++ b/src/sample/GUI/GUI_AddSong.fxml
@@ -9,24 +9,24 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_AddSong">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_AddSong">
    <children>
       <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="107.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../photos/logo.png" />
+            <Image url="@../photos/logotrans.png" />
          </image>
       </ImageView>
       <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
-      <TextField fx:id="titleField" alignment="CENTER" layoutX="17.0" layoutY="248.0" promptText="TITLE" />
-      <TextField fx:id="artistField" alignment="CENTER" layoutX="17.0" layoutY="305.0" promptText="ARTIST" />
-      <TextField fx:id="genreField" alignment="CENTER" layoutX="16.0" layoutY="364.0" promptText="GENRE" />
-      <TextField fx:id="albumField" alignment="CENTER" layoutX="217.0" layoutY="248.0" promptText="ALBUM" />
-      <TextField fx:id="durationField" alignment="CENTER" layoutX="217.0" layoutY="305.0" promptText="DURATION" />
-      <TextField fx:id="priceField" alignment="CENTER" layoutX="217.0" layoutY="363.0" promptText="PRICE" />
+      <TextField fx:id="titleField" alignment="CENTER" layoutX="17.0" layoutY="235.0" promptText="TITLE" />
+      <TextField fx:id="artistField" alignment="CENTER" layoutX="16.0" layoutY="292.0" promptText="ARTIST" />
+      <TextField fx:id="genreField" alignment="CENTER" layoutX="17.0" layoutY="351.0" promptText="GENRE" />
+      <TextField fx:id="albumField" alignment="CENTER" layoutX="217.0" layoutY="235.0" promptText="ALBUM" />
+      <TextField fx:id="durationField" alignment="CENTER" layoutX="217.0" layoutY="292.0" promptText="DURATION" />
+      <TextField fx:id="priceField" alignment="CENTER" layoutX="217.0" layoutY="351.0" promptText="PRICE" />
       <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
       <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-      <Button layoutX="156.0" layoutY="409.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="29.0" prefWidth="68.0" style="-fx-background-color: #33adff;" text="SAVE" textFill="WHITE" />
-      <Text fill="#797979" layoutX="137.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+      <Button layoutX="156.0" layoutY="395.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="34.0" prefWidth="68.0" style="-fx-background-color: #8cd1ff;" text="SAVE" textFill="WHITE" />
+      <Text fill="WHITE" layoutX="137.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
          <font>
             <Font name="Book Antiqua" size="22.0" />
          </font>
