--- a/src/sample/GUI/GUI_Addfunds.fxml
+++ b/src/sample/GUI/GUI_Addfunds.fxml
@@ -9,35 +9,35 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_AddFunds">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_AddFunds">
     <children>
         <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="107.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../photos/logo.png" />
+                <Image url="@../photos/logotrans.png" />
             </image>
         </ImageView>
         <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
-        <ButtonBar layoutX="90.0" layoutY="217.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: f2f2f2;">
+        <ButtonBar layoutX="90.0" layoutY="217.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: CCCCCC;">
             <buttons>
-                <Text fill="#00000099" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD FUND" wrappingWidth="79.9921875" />
-                <Button mnemonicParsing="false" onAction="#handleAdd5Dollar" style="-fx-background-color: #33adff;" text="5 $" textFill="WHITE" />
+                <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD FUND" wrappingWidth="79.9921875" />
+                <Button mnemonicParsing="false" onAction="#handleAdd5Dollar" style="-fx-background-color: #8cd1ff;" text="5 $" textFill="WHITE" />
             </buttons>
         </ButtonBar>
-        <ButtonBar layoutX="90.0" layoutY="282.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: f2f2f2;">
+        <ButtonBar layoutX="90.0" layoutY="282.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: CCCCCC;">
             <buttons>
-                <Text fill="#00000099" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD FUND" wrappingWidth="79.9921875" />
-                <Button mnemonicParsing="false" onAction="#handleAdd15Dollar" style="-fx-background-color: #33adff;" text="15 $" textFill="WHITE" />
+                <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD FUND" wrappingWidth="79.9921875" />
+                <Button mnemonicParsing="false" onAction="#handleAdd15Dollar" style="-fx-background-color: #8cd1ff;" text="15 $" textFill="WHITE" />
             </buttons>
         </ButtonBar>
-        <ButtonBar layoutX="90.0" layoutY="350.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: f2f2f2;">
+        <ButtonBar layoutX="90.0" layoutY="350.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: CCCCCC;">
             <buttons>
-                <Text fill="#00000099" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD FUND" wrappingWidth="79.9921875" />
-                <Button mnemonicParsing="false" onAction="#handleAdd25Dollar" style="-fx-background-color: #33adff;" text="25 $" textFill="WHITE" />
+                <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD FUND" wrappingWidth="79.9921875" />
+                <Button mnemonicParsing="false" onAction="#handleAdd25Dollar" style="-fx-background-color: #8cd1ff;" text="25 $" textFill="WHITE" />
             </buttons>
         </ButtonBar>
-        <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-        <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleBackToStore" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="STORE" textFill="WHITE" />
-      <Text fill="#797979" layoutX="137.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+        <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="HELP" textFill="WHITE" />
+        <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleBackToStore" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="STORE" textFill="WHITE" />
+      <Text fill="WHITE" layoutX="137.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
          <font>
             <Font name="Book Antiqua" size="22.0" />
          </font>
