--- a/src/sample/GUI/GUI_Admin.fxml
+++ b/src/sample/GUI/GUI_Admin.fxml
@@ -9,35 +9,35 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Admin">
+<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Admin">
     <children>
-        <Button fx:id="cancelButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-        <Button fx:id="settingsButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
+        <Button fx:id="cancelButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="CANCEL" textFill="WHITE" />
+        <Button fx:id="settingsButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="HELP" textFill="WHITE" />
         <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="106.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../photos/logo.png" />
+                <Image url="@../photos/logotrans.png" />
             </image>
         </ImageView>
         <Separator layoutX="90.0" layoutY="190.0" prefWidth="200.0" />
-      <ButtonBar layoutX="92.0" layoutY="212.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: f2f2f2;">
+      <ButtonBar layoutX="92.0" layoutY="212.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: cccccc;">
          <buttons>
-            <Text fill="#00000099" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD SONG" wrappingWidth="79.9921875" />
-            <Button minWidth="67.0" mnemonicParsing="false" onAction="#paneChangeToAddSong" prefHeight="25.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD SONG" wrappingWidth="79.9921875" />
+            <Button minWidth="60.0" mnemonicParsing="false" onAction="#paneChangeToAddSong" prefHeight="25.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
-      <ButtonBar layoutX="90.0" layoutY="279.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: f2f2f2;">
+      <ButtonBar layoutX="90.0" layoutY="279.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: cccccc;">
          <buttons>
-            <Text fill="#00000099" strokeType="OUTSIDE" strokeWidth="0.0" text="REMOVE SONG" wrappingWidth="89.192138671875" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="REMOVE SONG" wrappingWidth="89.192138671875" />
             <Button mnemonicParsing="false" onAction="#paneChangeToRemoveSong" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
-      <ButtonBar layoutX="90.0" layoutY="346.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: f2f2f2;">
+      <ButtonBar layoutX="90.0" layoutY="346.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: cccccc;">
          <buttons>
-            <Text fill="#00000099" strokeType="OUTSIDE" strokeWidth="0.0" text="CHANGE PRICE" wrappingWidth="81.19219970703125" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="CHANGE PRICE" wrappingWidth="81.19219970703125" />
             <Button mnemonicParsing="false" onAction="#paneChangeToChangePrice" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
-      <Text fill="#797979" layoutX="137.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+      <Text fill="WHITE" layoutX="137.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
          <font>
             <Font name="Book Antiqua" size="22.0" />
          </font>
