--- a/src/sample/GUI/GUI_Cart.fxml
+++ b/src/sample/GUI/GUI_Cart.fxml
@@ -10,15 +10,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Cart">
+<AnchorPane fx:id="rootPane" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Cart">
    <children>
       <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="106.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../photos/logo.png" />
+            <Image url="@../photos/logotrans.png" />
          </image>
       </ImageView>
-      <Button layoutX="282.0" layoutY="415.0" mnemonicParsing="false" onAction="#buy" prefHeight="29.0" prefWidth="66.0" style="-fx-background-color: #33adff;" text="BUY" textFill="WHITE" />
-      <Text fill="#00000099" layoutX="30.0" layoutY="240.0" strokeType="OUTSIDE" strokeWidth="0.0" text="🛒 Shopping cart" wrappingWidth="214.8359375">
+      <Button layoutX="282.0" layoutY="415.0" mnemonicParsing="false" onAction="#buy" prefHeight="29.0" prefWidth="66.0" style="-fx-background-color: #8cd1ff;" text="BUY" textFill="WHITE" />
+      <Text fill="WHITE" layoutX="30.0" layoutY="240.0" strokeType="OUTSIDE" strokeWidth="0.0" text="🛒 Shopping cart" wrappingWidth="214.8359375">
          <font>
             <Font size="26.0" />
          </font>
@@ -26,8 +26,8 @@
       <ListView fx:id="listView" layoutX="30.0" layoutY="251.0" prefHeight="151.0" prefWidth="320.0" />
       <TextField fx:id="totalPriceField" disable="true" editable="false" focusTraversable="false" layoutX="30.0" layoutY="415.0" prefHeight="29.0" prefWidth="152.0" promptText="TOTAL PRICE" />
       <Separator layoutX="90.0" layoutY="188.0" prefWidth="200.0" />
-      <Button layoutX="206.0" layoutY="415.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="29.0" prefWidth="66.0" style="-fx-background-color: #33adff;" text="CANCEL" textFill="WHITE" />
-      <Text fill="#797979" layoutX="137.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+      <Button layoutX="206.0" layoutY="415.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="29.0" prefWidth="66.0" style="-fx-background-color: #8cd1ff;" text="CANCEL" textFill="WHITE" />
+      <Text fill="WHITE" layoutX="137.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
          <font>
             <Font name="Book Antiqua" size="22.0" />
          </font>
