--- a/src/sample/GUI/GUI_ForgotPassword.fxml
+++ b/src/sample/GUI/GUI_ForgotPassword.fxml
@@ -9,29 +9,29 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_ForgotPassword">
+<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_ForgotPassword">
    <children>
       <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="106.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../photos/logo.png" />
+            <Image url="@../photos/logotrans.png" />
          </image>
       </ImageView>
-      <Button layoutX="131.0" layoutY="377.0" mnemonicParsing="false" onAction="#loginVerification" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="SEND " textFill="WHITE" />
-      <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
+      <Button layoutX="131.0" layoutY="377.0" mnemonicParsing="false" onAction="#sendEmail" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #8cd1ff;" text="SEND " textFill="WHITE" />
+      <Button layoutX="318.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="HELP" textFill="WHITE" />
+      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="CANCEL" textFill="WHITE" />
       <Separator layoutX="91.0" layoutY="181.0" prefWidth="200.0" />
-      <Text fill="#00000099" layoutX="99.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot your password?">
+      <Text fill="WHITE" layoutX="101.0" layoutY="226.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot your password?">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Text fill="#00000099" layoutX="53.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don't worry. Resetting your password is easy, just tell us the email address you registered." textAlignment="CENTER" wrappingWidth="275.10498046875">
+      <Text fill="WHITE" layoutX="53.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don't worry. Resetting your password is easy, just tell us the email address you registered." textAlignment="CENTER" wrappingWidth="275.10498046875">
          <font>
             <Font size="13.0" />
          </font>
       </Text>
       <TextField fx:id="emailField" alignment="TOP_LEFT" layoutX="61.0" layoutY="311.0" prefHeight="27.0" prefWidth="257.0" promptText="Email address" />
-      <Text fill="#797979" layoutX="137.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+      <Text fill="WHITE" layoutX="137.0" layoutY="164.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
          <font>
             <Font name="Book Antiqua" size="22.0" />
          </font>
