--- a/src/sample/GUI/GUI_Library.fxml
+++ b/src/sample/GUI/GUI_Library.fxml
@@ -9,30 +9,30 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
     <children>
-        <Button mnemonicParsing="false" onAction="#paneChangeToStore" prefHeight="26.0" prefWidth="98.0" style="-fx-background-color: #33adff;" text="STORE" textFill="WHITE" />
-        <Button layoutX="96.0" mnemonicParsing="false" onAction="#handleAccountSettings" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="ACCOUNT" textFill="WHITE" />
-        <Button layoutX="191.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="HELP" textFill="WHITE" />
-        <Button layoutX="286.0" mnemonicParsing="false" onAction="#handleLogOut" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #33adff;" text="LOG OUT" textFill="WHITE" />
+        <Button mnemonicParsing="false" onAction="#paneChangeToStore" prefHeight="26.0" prefWidth="98.0" style="-fx-background-color: #8cd1ff;" text="STORE" textFill="WHITE" />
+        <Button layoutX="96.0" mnemonicParsing="false" onAction="#handleAccountSettings" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #8cd1ff;" text="ACCOUNT" textFill="WHITE" />
+        <Button layoutX="191.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #8cd1ff;" text="HELP" textFill="WHITE" />
+        <Button layoutX="286.0" mnemonicParsing="false" onAction="#handleLogOut" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #8cd1ff;" text="LOG OUT" textFill="WHITE" />
         <Separator layoutX="95.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
         <Separator layoutX="190.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
         <Separator layoutX="284.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="7.0" />
         <ImageView fx:id="logoView" fitHeight="75.0" fitWidth="95.0" layoutX="144.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../photos/logo.png" />
-            </image>
+         <image>
+            <Image url="@../photos/logotrans.png" />
+         </image>
         </ImageView>
         <ScrollPane layoutY="105.0" prefHeight="358.0" prefWidth="380.0">
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="357.0" prefWidth="378.0">
                     <children>
-                        <TableView fx:id="tableView" layoutY="-1.0" prefHeight="464.0" prefWidth="380.0">
+                        <TableView fx:id="tableView" layoutY="-1.0" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;">
                             <columns>
-                                <TableColumn fx:id="columnSongName" prefWidth="95.0" style="-fx-fill: FFFFFF;" text="Title" />
-                                <TableColumn fx:id="columnArtist" prefWidth="95.0" text="Artist" />
-                                <TableColumn fx:id="columnAlbum" prefWidth="95.0" text="Album" />
-                                <TableColumn fx:id="columnDuration" prefWidth="95.0" text="🕒" />
+                                <TableColumn fx:id="columnSongName" prefWidth="95.0" style="-fx-background-color: #b3b3b3; -fx-text-fill: #FFFFFF;" text="Title" />
+                                <TableColumn fx:id="columnArtist" prefWidth="95.0" style="-fx-background-color: #CCCCCC;" text="Artist" />
+                                <TableColumn fx:id="columnAlbum" prefWidth="95.0" style="-fx-background-color: #b3b3b3;" text="Album" />
+                                <TableColumn fx:id="columnDuration" prefWidth="95.0" style="-fx-background-color: #CCCCCCs;" text="🕒" />
                             </columns>
                         </TableView>
                     </children>
