--- a/src/sample/GUI/GUI_RemoveSong.fxml
+++ b/src/sample/GUI/GUI_RemoveSong.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_RemoveSong">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_RemoveSong">
    <children>
-      <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="107.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="107.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../photos/logo.png" />
+            <Image url="@../photos/logotrans.png" />
          </image>
       </ImageView>
       <Text fill="#797979" layoutX="116.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="REMOVE SONG">
@@ -24,20 +24,20 @@
          </font>
       </Text>
       <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
-      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-      <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-      <Button layoutX="146.0" layoutY="424.0" mnemonicParsing="false" onAction="#removeSong" prefHeight="40.0" prefWidth="91.0" style="-fx-background-color: #33adff;" text="REMOVE" textFill="WHITE" />
-      <ScrollPane layoutX="-1.0" layoutY="157.0" prefHeight="267.0" prefWidth="380.0">
+      <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="HELP" textFill="WHITE" />
+      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="CANCEL" textFill="WHITE" />
+      <Button layoutX="146.0" layoutY="410.0" mnemonicParsing="false" onAction="#removeSong" prefHeight="40.0" prefWidth="91.0" style="-fx-background-color: #8cd1ff;" text="REMOVE" textFill="WHITE" />
+      <ScrollPane layoutY="130.0" prefHeight="267.0" prefWidth="380.0">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="370.0">
                <children>
-                  <TableView layoutX="-1.0" prefHeight="274.0" prefWidth="380.0">
+                  <TableView layoutX="-1.0" prefHeight="274.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;">
                      <columns>
-                        <TableColumn prefWidth="75.0" text="Title" />
-                        <TableColumn prefWidth="75.0" text="Artist" />
-                        <TableColumn prefWidth="75.0" text="Album" />
-                        <TableColumn prefWidth="75.0" text="DURATION" />
-                        <TableColumn prefWidth="75.0" text="PRICE" />
+                        <TableColumn prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="Title" />
+                        <TableColumn prefWidth="75.0" style="-fx-background-color: #CCCCCC;" text="Artist" />
+                        <TableColumn prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="Album" />
+                        <TableColumn prefWidth="75.0" style="-fx-background-color: #CCCCCC;" text="DURATION" />
+                        <TableColumn prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="PRICE" />
                      </columns>
                   </TableView>
                </children>
