--- a/src/sample/GUI/GUI_Verification.fxml
+++ b/src/sample/GUI/GUI_Verification.fxml
@@ -8,28 +8,28 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Verification">
+<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Verification">
    <children>
-      <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="106.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../photos/logo.png" />
-         </image>
-      </ImageView>
-      <Text fill="#797979" layoutX="139.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
-         <font>
-            <Font name="Agency FB" size="22.0" />
-         </font>
-      </Text>
       <Button layoutX="114.0" layoutY="352.0" mnemonicParsing="false" onAction="#paneToLibrary" prefHeight="55.0" prefWidth="156.0" style="-fx-background-color: #33adff;" text="LIBRARY" textFill="WHITE" />
-      <Separator layoutX="99.0" layoutY="183.0" prefWidth="200.0" />
-      <Text fill="#797979" layoutX="24.0" layoutY="247.0" strokeType="OUTSIDE" strokeWidth="0.0" text="THANK YOU FOR YOUR PURSHASE!">
+      <Text fill="WHITE" layoutX="26.0" layoutY="247.0" strokeType="OUTSIDE" strokeWidth="0.0" text="THANK YOU FOR YOUR PURSHASE!">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Text>
-      <Text fill="#797979" layoutX="63.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your purchased songs are now in your library">
+      <Text fill="WHITE" layoutX="63.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your purchased songs are now in your library">
          <font>
             <Font size="13.0" />
+         </font>
+      </Text>
+      <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="109.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../photos/logotrans.png" />
+         </image>
+      </ImageView>
+      <Separator layoutX="93.0" layoutY="191.0" prefWidth="200.0" />
+      <Text fill="WHITE" layoutX="139.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+         <font>
+            <Font name="Book Antiqua" size="22.0" />
          </font>
       </Text>
    </children>
